maybe fix background color shift bug

--- a/style.css
+++ b/style.css
@@ -6,8 +6,8 @@ html {
 body {
   min-height: 100%;
   background: #00094a;
-  background: -webkit-linear-gradient(.9turn, rgb(0, 9, 74), rgb(151, 0, 189));
-    -webkit-transform: translateZ(0);
+    
+    background: linear-gradient(to left bottom,  rgb(0, 9, 74), rgb(151, 0, 189)); /*Top Right to Left Bottom*/
 }
 
 * {
